# commit_astrologer

./: README.md  pyproject.toml  setup.py
commit_astrologer/: __init__.py  cli.py  core.py
commit_astrologer/astrology_systems/: classic.py  mythical_creatures.py  software_engineers.py
tests/: test_core.py
