[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-astrologer"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A humorous CLI tool for analyzing commit messages astrologically."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: [Your License Name]",
    "Operating System :: OS Independent",
]
packages = ["commit_astrologer", "commit_astrologer.astrology_systems"]
scripts = {
    "commit-astrologer": "commit_astrologer.cli:main"
}

[tool.setuptools.packages.find]
where = ["."]